# Nested-Diff-RESTful

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: publish.yaml  tests.yml
nested_diff_restful/: __init__.py  api.py
nested_diff_restful/templates/: index.html
static/: nested_diff.css  nested_diff.js
templates/: index.html
tests/: conftest.py  test_api_diff.py  test_api_format.py  test_api_misc.py  test_api_patch.py  test_cli.py
