[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'nested_diff_restful'
authors = [{name = 'Michael Samoglyadov', email = 'mixas.sr@gmail.com'}]
readme = 'README.md'
license = {file = 'LICENSE'}
keywords = ['api', 'diff', 'nested-diff', 'recursive-diff', 'rest']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]
dynamic = ['version', 'description']
dependencies = [
    'flask',
    'gunicorn',
    'nested_diff>=1.3.2',
]
requires-python = '>=3.8'
scripts = { nested_diff_restful = 'nested_diff_restful:start_wsgi_server' }

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
    'pytest-ruff',
]

[project.urls]
Homepage = 'https://github.com/mr-mixas/Nested-Diff-RESTful'
Repository = 'https://github.com/mr-mixas/Nested-Diff-RESTful.git'

[tool.pytest.ini_options]
addopts = """
          --cov=nested_diff_restful \
          --cov-fail-under=97 \
          --cov-report term-missing \
          --no-cov-on-fail \
          --ruff \
          --ruff-format \
          --verbosity=2 \
          """

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'
